<resources>
    <string name="app_name">CV For Khamidjon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Khamidjon Khamidov</string>
    <string name="menu_home">Home</string>
    <string name="menu_title_about_me">About Me</string>
    <string name="menu_title_achievements">Achievements</string>
    <string name="menu_title_projects">Projects</string>
    <string name="source_code">Source Code</string>
    <string name="menu_title_about_app">About App</string>
    <string name="menu_title_contact">Contact</string>
    <string name="notifications">Notifications</string>
    <string name="exit">Exit</string>
    <string name="app_details">App Details</string>
    <string name="ok">OK</string>
    <string name="refresh">Refresh</string>
    <string name="hi_i_am">Hi, I am</string>
    <string name="github">Github</string>
    <string name="facebook">Facebook</string>
    <string name="website">Website</string>
    <string name="personal_website">Personal Website</string>
    <string name="telegram">Telegram</string>
    <string name="linkedin">LinkedIn</string>
    <string name="android_development">Android Development</string>
    <string name="algorithms">Algorithms</string>
    <string name="web_ndevelopment">Web\nDevelopment</string>
    <string name="algorithms_n_in_c_c">Algorithms\n in C/C++</string>
    <string name="android_developer">Android Developer</string>
    <string name="download_cv">Download CV</string>
    <string name="my_intro">My Intro</string>
    <string name="home_des_text">I am an enthusiastic Android and Junior Web Developer who is keen on learning and working with a friendly team.</string>
    <string name="aboutme_des">I have been learning programming since Sep 2017. Over this period, I have learned Algorithms in C/C++, Android Development(Dagger 2, Retrofit, Firebase, MVVM/MVI, TDD/Unit Testing, UI concepts, Coroutines, Flows, Channels, Room, LiveData, Fragment Factory, Navigation Components and so on) in Java/Kotlin and Web development using html, css, javasrcipt, reactjs for frontend and nodejs, mongodb for backend.</string>
    <string name="phone">Phone:</string>
    <string name="phone_number">+44 075653 36207</string>
    <string name="email">Email:</string>
    <string name="my_interests">My Interests</string>
    <string name="chess">Chess</string>
    <string name="travel">Travel</string>
    <string name="movie">Movie</string>
    <string name="music">Music</string>
    <string name="my_email">hamidovhamid1998@gmail.com</string>
    <string name="skill_dummy_items">item1   item1   item1   item1item   1item1   adlfkja   asldkjfas   sadfjkla   asldfj    asldfjasdf   asdlkfha   askdjfa   alskdhf   alas   dkl   asldkf   al   dhfadkfah  </string>
    <string name="project_dummy_des">This is some kind project description if you need ajfdal adfl aasdf a sdf asdfaas as dfa. Yeah this is quite dummy description. So I dont care what I am typing. But, You may need it, after some time if you want. But you might not be able to understand it quite easily.</string>
    <string name="go_to_app">Go to app</string>
    <string name="go_to_source_code">Go to Source code</string>
    <string name="posts">Posts</string>
    <string name="skills">Skills</string>
    <string name="android">Android</string>
    <string name="others">Others</string>
    <string name="expand_all">Expand All</string>
    <string name="reduce_all">Reduce All</string>
    <string name="dummy_conact_txt">dummy_conaadf sd f sdlfsj dlkfjs jdfsldfk jsdlfj sldjflj sdlfjsdl jflsdjf lsjdf lsdjf lsdjflsjd flsjdfl sjdf lsdj lsdjf lsdjf lsdjfl jsdf sdlkfjsldjf lsdj flsdjf lsdjfljsd ljfsdlj fsldjf dlsj fsdljf sdljf sldkjf sldj fsdlkjf sldj flsjf lsdjf lsdjflsdjf lsjdflsjdflsj dflsdjf lsjdfljsdfl jsdlfjsldfj sldfjsdljfsljdct_txt</string>
</resources>
