<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/home"
            android:title="@string/menu_home"
            />

        <item
            android:id="@+id/aboutMeFragment"
            android:icon="@drawable/about_me"
            android:title="@string/menu_title_about_me"
            />

        <item
            android:id="@+id/achievementsFragment"
            android:icon="@drawable/achievements"
            android:title="@string/menu_title_achievements"
            />

        <item
            android:id="@+id/mi_projects"
            android:icon="@drawable/projects"
            android:title="@string/menu_title_projects"
            />

        <item
            android:id="@+id/mi_source_code"
            android:icon="@drawable/source_code"
            android:title="@string/source_code"
            />
    </group>

    <group>
        <item
            android:id="@+id/aboutAppFragment"
            android:icon="@drawable/about_app"
            android:title="@string/menu_title_about_app"
            />

        <item
            android:id="@+id/mi_contact_me"
            android:icon="@drawable/contact"
            android:title="@string/menu_title_contact"
            />

        <item
            android:id="@+id/mi_notifications"
            android:icon="@drawable/notification"
            android:title="@string/notifications"
            />
    </group>

    <group>
        <item
            android:id="@+id/mi_exit"
            android:icon="@drawable/exit"
            android:title="@string/exit"
            />
    </group>
</menu>