<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about_me_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.b_aboutme.AboutMeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:orientation="vertical">

        <TextView
            android:id="@+id/aboue_me_tv_my_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/my_intro"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/home_tv_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_grey"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/aboutme_des" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:paddingStart="20dp"
            android:paddingEnd="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginTop="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/name"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="0dp"
                android:gravity="center_vertical"
                android:textColor="@color/colorAccent"
                android:text="Name: "
                android:textStyle="bold|italic"
                android:layout_marginStart="10dp"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:gravity="center"
                android:textColor="@color/text_grey"
                android:text="@string/full_name"
                android:layout_marginStart="10dp"
                android:textSize="19sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/aboutme_tv_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:paddingStart="20dp"
            android:paddingEnd="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginTop="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ph"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:gravity="center_vertical"
                android:textColor="@color/colorAccent"
                android:text="@string/phone"
                android:textStyle="bold|italic"
                android:layout_marginStart="10dp"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="0dp"
                android:gravity="center"
                android:textColor="@color/text_grey"
                android:text="@string/phone_number"
                android:layout_marginStart="10dp"
                android:textSize="19sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/aboutme_tv_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:paddingStart="20dp"
            android:paddingEnd="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginTop="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/email"
                android:src="@drawable/email"
                android:layout_gravity="bottom"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="0dp"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                android:textColor="@color/colorAccent"
                android:text="@string/email"
                android:textStyle="bold|italic"
                android:layout_marginStart="10dp"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:gravity="center"
                android:textColor="@color/text_grey"
                android:text="@string/my_email"
                android:layout_marginStart="10dp"
                android:textSize="19sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginTop="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/education"
                android:layout_gravity="bottom"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="0dp"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                android:textColor="@color/colorAccent"
                android:text="Edcuation: "
                android:textStyle="bold|italic"
                android:layout_marginStart="10dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/aboutme_tv_tuit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:gravity="center"
                android:textColor="@color/link_color"
                android:text="TUIT"
                android:layout_marginStart="10dp"
                android:textSize="19sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:gravity="center"
                android:textColor="@color/text_grey"
                android:text=" and "
                android:layout_marginStart="10dp"
                android:textSize="19sp"/>

            <TextView
                android:id="@+id/aboutme_tv_lsbu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:gravity="center"
                android:textColor="@color/link_color"
                android:text="LSBU"
                android:layout_marginStart="10dp"
                android:textSize="19sp"/>
        </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:paddingStart="20dp"
        android:paddingEnd="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="5dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/experience"
            android:layout_gravity="bottom"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:textColor="@color/colorAccent"
            android:text="Experience: "
            android:textStyle="bold|italic"
            android:layout_marginStart="10dp"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/aboutme_tv_experience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:gravity="center"
            android:textColor="@color/text_grey"
            android:text="3 years 0 month(s) 0 day(s)"
            android:layout_marginStart="10dp"
            android:textSize="19sp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_interests"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textSize="24sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="bottom"
                android:src="@drawable/chess"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="5dp"
                android:text="@string/chess"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="10dp"
                android:src="@drawable/travel"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="5dp"
                android:text="@string/travel"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="10dp"
                android:src="@drawable/movie"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="6dp"
                android:text="@string/movie"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="10dp"
                android:src="@drawable/music"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="5dp"
                android:text="@string/music"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>













